<resources>
    <string name="app_name">practika12_var4</string>
    <string name="Add_weather">Добавьте погоду</string>
    <string name="Temperature">Температура</string>
    <string name="City">Город</string>
    <string name="Back">Назад</string>
    <string name="Pressure">Давление</string>
    <string name="Speed_Wind">Скорость ветра</string>
    <string name="Type_Weather">Тип погоды</string>
    <string name="Hello_look_weaher">Привет, посмотри погоду!</string>
    <string name="Look_weaher">Посмотреть погоду</string>
    <string name="Weather_list">Список погоды</string>
    <string name="update_weather">Изменить погоду</string>
</resources>